2010-09-20 Dominique Dumont  <domi.dumont@free.fr> 1.209
	* Fixed Debian::Dep5 parser: fixed read issue and added write
	capability

2010-09-16 Dominique Dumont  <domi.dumont@free.fr> 1.208
	* Fixed missing dependencies in Build.PL (Building from hg
	requires Dist::Zilla and Dist-Zilla-Plugins-CJM >= 3.01)

2010-09-14 Dominique Dumont  <domi.dumont@free.fr> 1.207
	* Added Debian's Dep-5 model (with config-edit-dep5 CLI)
	* Value.pm: Added validation of value based on a Parse::RecDescent
	grammar
	* AnyId.pm: Authorized keys can also be based of a
	Parse::RecDescent grammar
	* Node.pm (find_element): returns the element name (if known). Can
	also find the element in a case insensitive manner

2010-07-23  Dominique Dumont  <domi.dumont@free.fr> 1.206

	First version to feature code written during Google Summer of Code 2010.
	For this GSoC, Krzysztof Tyszecki has provided:
	* a new backend for INI file that can:
	    * read and write comments to and from annotations. This way
	      users comments are preserved
	    * read and write parameters that are repeated in the INI file. This
	      repeated parameters will be loaded in list elements
	* the capacity to load annotation from perl data structure
	* a new model feature to accept unknown element. This will enable
	loading and writing configuration files even if parameters are
	unknown. This feature is required to create models targeted for
	configuration upgrades: only upgrade and migration specifications
	need to be specified in a model. Parameters that don't change from
	one version to another need not to be specified in the model.

	Other changes:
	* lib/Config/Model/Loader.pm (_walk_node): bug fix to load node
	element annotation
	* lib/Config/Model/Dumper.pm (): bug fix to dump hash and list
	element annotations
	* Fixed Fstab example

2010-06-04  Dominique Dumont  <domi.dumont@free.fr> 1.205

	* t/node.t: patch by Niko Tyni to avoid Carp::Heavy failure. Fix